# winston_logger_rs

./: CONTRIBUTING.md  Cargo.toml  release.toml
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
logform/: .gitignore  Cargo.toml  README.md
logform/src/: lib.rs  log_info.rs
logform/src/config/: cli.rs  mod.rs  rust.rs  syslog.rs
logform/src/formats/: align.rs  cli.rs  colorize.rs  format.rs  json.rs  label.rs  logstash.rs  macros.rs  metadata.rs  mod.rs  ms.rs  pad_levels.rs  passthrough.rs  pretty_print.rs  printf.rs  simple.rs  timestamp.rs  uncolorize.rs
logform/src/utils/: format_json.rs
logform/tests/: common_usage_test.rs
logmark/: .gitignore  Cargo.toml  Makefile
logmark/docs/: buffering_analysis.md
logmark/src/: main.rs
winston/: Cargo.toml
winston/benches/: logger_benchmark.rs
winston/src/: global.rs  lib.rs  log_macros.rs  logger.rs  logger_builder.rs  logger_options.rs  pipeline.rs
winston/tests/: backpressure.rs  concurrency.rs  global_logger.rs  log_backend.rs  macros.rs  public_api.rs
winston/tests/common/: mod.rs
winston_daily_rotate_file/: Cargo.toml
winston_daily_rotate_file/src/: daily_rotate_file.rs  lib.rs
winston_file/: Cargo.toml
winston_file/src/: lib.rs
winston_http/: Cargo.toml
winston_http/src/: lib.rs
winston_mongodb/: .env.example  Cargo.toml
winston_mongodb/examples/: dsl_query_example.rs
winston_mongodb/src/: lib.rs  to_mongodb_filter.rs
winston_proxy_transport/: Cargo.toml
winston_tracing/: Cargo.toml
winston_tracing/src/: lib.rs
winston_transport/: Cargo.toml
winston_transport/src/: batch_transport.rs  log_query.rs  threaded_transport.rs  transport.rs  transport_adapters.rs
winston_transport/src/query_dsl/dlc/: integration_with_log_query.rs
winston_transport/src/query_dsl/dlc/alpha/a/: comparator.rs  field_path.rs  json_query_node.rs  mod.rs
