[workspace]
resolver = "3"
members = [
    "logform",
    "logmark",
    "winston",
    "winston_daily_rotate_file",
    "winston_file",
    "winston_http",
    "winston_mongodb",
    "winston_proxy_transport",
    "winston_transport",
    "winston_tracing",
]

[workspace.dependencies]
logform = { path = "logform" }
winston = { path = "winston" }
winston_transport = { path = "winston_transport" }
winston_proxy_transport = { path = "winston_proxy_transport" }
