[workspace]
resolver = "3"
members = [
    "logform",
    "logmark",
    "winston",
    "winston_daily_rotate_file",
    "winston_file",
    "winston_http",
    "winston_mongodb",
    "winston_proxy_transport",
    "winston_transport",
    "winston_tracing",
]

[workspace.dependencies]
logform = { path = "logform", version = "0.7.1-dev" }
winston = { path = "winston", version = "0.8.3-dev" }
winston_transport = { path = "winston_transport", version = "0.7.1" }
winston_proxy_transport = { path = "winston_proxy_transport", version = "0.4.1" }
