[package]
name = "logform"
version = "0.7.0"
edition = "2021"
description = "logform for rust"
license = "MIT"
documentation = "https://docs.rs/logform"
repository = "https://github.com/ifeanyi-ugwu/logform_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "logging", "format"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
regex = "1.10.6"
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = "1.0.125"

[features]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.5.1"
