[package]
name = "winston_file"
version = "0.2.0"
edition = "2024"
description = "file transport for winston"
license = "MIT"

[dependencies]
logform = { version = "0.6.2", path = "../logform" }
serde_json = "1.0.145"
winston_proxy_transport = { version = "0.4.0", path = "../winston_proxy_transport" }
winston_transport = { version = "0.6.0", path = "../winston_transport" }
