[package]
name = "winston_file"
version = "0.3.0"
edition = "2024"
description = "file transport for winston"
license = "MIT"
repository = "https://github.com/ifeanyi-ugwu/winston_file"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2.1"
logform.workspace = true
serde_json = "1.0.145"
winston_proxy_transport.workspace = true
winston_transport.workspace = true
