[package]
name = "winston_http"
version = "0.3.0"
edition = "2021"
description = "winston-http for rust"
license = "MIT"
documentation = "https://docs.rs/winston_http"
repository = "https://github.com/ifeanyi-ugwu/winston_http_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "transport"]
categories = ["development-tools::debugging"]

[dependencies]
logform = { version = "0.6.2", features = ["serde"], path = "../logform" }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
winston_proxy_transport = { version = "0.4.0", path = "../winston_proxy_transport" }
winston_transport = { version = "0.7.0", path = "../winston_transport" }

[dev-dependencies]
serde_json = "1.0.140"
