[package]
name = "winston_tracing"
version = "0.1.1"
edition = "2021"
description = "tracing-subscriber Layer for the winston logger"
license = "MIT"
repository = "https://github.com/ifeanyi-ugwu/winston_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "logger", "logging", "tracing"]
categories = ["development-tools::debugging"]

[dependencies]
logform.workspace = true
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
winston.workspace = true

[dev-dependencies]
winston_transport.workspace = true
